@@ -3,8 +3,9 @@ Commander Genius Release :
 
 v1.0 RC: 
 --------
+- The try-again message is back and better
 - A whole lot of bug fixes.
-- NlogN Routine for better speed and AI
+- Routine for better speed and AI
 - Now menu is opened when any button in the title screen is pressed.
 
 v1.0 Beta6: 
